# empreinte

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MVP.md  Makefile  POC.md  PROJET.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_multi_tenant.py
deploy/helm/empreinte/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
deploy/helm/empreinte/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  migrate-job.yaml  service.yaml  servicemonitor.yaml
deploy/vllm/: vllm-deployment.yaml
docs/: couche-01-ingestion.md  couche-02-extraction-multimodale.md  couche-03-taxonomie-esrs.md  couche-04-moteur-carbone.md  couche-05-rag-reglementaire.md  couche-06-gouvernance-souverainete.md  couche-07-api.md  couche-08-tests.md  couche-09-persistance-deploiement.md  couche-10-eval-resilience.md
docs/adr/: 0001-multimodal-on-premise.md  0002-llm-extrait-moteur-calcule.md  0003-mapping-esrs-explicite.md
eval/: run_eval.py
eval/dataset/: demo-facture-energie.json
scripts/: index_corpus.py  purge_retention.py
src/empreinte/: __init__.py  api.py  assistant.py  auth.py  config.py  corpus.py  dependencies.py  evaluation.py  extraction.py  factors.py  gateway.py  governance.py  ingestion.py  logging.py  middleware.py  object_store.py  observability.py  report.py  repositories.py  retriever.py  schemas.py  services.py  taxonomy.py
tests/: conftest.py  test_api.py  test_assistant.py  test_auth.py  test_corpus_integration.py  test_evaluation.py  test_extraction.py  test_factors.py  test_gateway.py  test_governance.py  test_ingestion.py  test_object_store.py  test_report.py  test_repositories.py  test_retriever.py  test_services.py  test_taxonomy.py
