[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "empreinte"
version = "0.1.0"
description = "Assistant GenAI multimodal on-premise pour le reporting ESG/CSRD : extraction vision, taxonomie ESRS, bilan carbone deterministe."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Seydina Bane" }]
keywords = ["genai", "llm", "multimodal", "vision", "esg", "csrd", "esrs", "carbon", "on-premise", "fastapi"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
pdf = ["pypdfium2>=4.30", "Pillow>=11.0"]
qdrant = ["qdrant-client>=1.13"]
dev = [
    "empreinte[pdf,qdrant]",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "detect-secrets>=1.5",
    "pip-audit>=2.7",
]
test = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "anyio>=4.6",
]

[project.urls]
Repository = "https://github.com/SeydinaBANE/empreinte"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RET", "ARG", "PTH"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --cov=src/empreinte --cov-report=term-missing"
markers = [
    "integration: tests d'integration necessitant des services externes (vLLM, Qdrant)",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
